# rust_examples

adivinha/: Cargo.toml
calculator/: Cargo.toml
calculator/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
data_race/: Cargo.toml
data_race/src/: main.rs
dbus/: Cargo.toml
dbus/src/: main.rs
escreve_arquivo/: Cargo.toml
ffi/: Cargo.toml
ffi/src/: main.bak  main.rs
hello_world/: Cargo.toml
hello_world/src/: main.rs
ler_arquivo/: Cargo.toml
ler_arquivo/src/: main.rs
mdns-client/: Cargo.toml
mdns-client/src/: main.rs
mdns-server/: Cargo.toml
mdns-server/src/: main.rs
modbus/: Cargo.toml
modbus/src/: main.rs
pattern_match/: Cargo.toml
pattern_match/src/: main.rs
pattern_match2/: Cargo.toml
pattern_match2/src/: main.rs
quick-xml/: Cargo.toml
quick-xml/src/: main.rs
raindrops/: Cargo.toml
raindrops/src/: main.rs
rest_api/: Cargo.toml
rest_api/src/: main.rs
rest_client/: Cargo.toml
rest_client/src/: main.rs
rocket_demo/: Cargo.toml  Rocket.toml
rocket_demo/src/: main.rs
rustls_client/: Cargo.toml
rustls_client/src/: main.rs
serde-xml-demo/: Cargo.toml
serde-xml-demo/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
test-tokio-modbus/: Cargo.toml
test-tokio-modbus/pki/: ca.key  ca.pem  client01.key  client01.pem  server.key  server.pem
test-tokio-modbus/src/: main.rs  sunspec.rs
tlsclient/: Cargo.toml
tlsclient/src/: main.rs
tlsserver/: Cargo.toml
tlsserver/src/: main.rs
use_lib/: Cargo.toml
use_lib/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
xml_demo/: Cargo.toml
xml_demo/src/: main.rs
