[package]
name = "mdns-client"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdns = "3.0.0"
futures-core = "0.3.15"
futures-util = "0.3.15"
log = "0.4.14"
async-stream = "0.3.2"
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }