[package]
name = "mdns-server"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.4"
libmdns = "0.6.1"

#[dependencies.mdns]
#git = "https://github.com/plietar/rust-mdns"
