[package]
name = "rest_api"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.1"
parking_lot = "0.11.1"
serde_json = "1.0"
# tokio = { version = "1.5.0", features = ["macros"] }
