[package]
name = "rest_client"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3",  features = ["rustls-tls"] }
tokio = { version = "1.7.1", features = ["full"] }
# native-tls = "0.2.7"