[package]
name = "rocket_demo"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-dev", features = ["secrets", "tls"] }
#rocket = { version = "0.4.10", features = ["tls"] }

