[package]
name = "rustls_client"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.19.0"
log = { version = "0.4.4", optional = true }
ring = "0.16.19"
sct = "0.7.0"
webpki = "0.21.4"
webpki-roots = "0.21.1"


[dev-dependencies]
env_logger = "0.8.2"
log = "0.4.4"
webpki-roots = "0.21.1"
criterion = "0.3.0"
rustls-pemfile = "0.2.0"
base64 = "0.13.0"

