[package]
name = "test-tokio-modbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
futures-util = "0.3.26"
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = [ "full" ] }
tokio-modbus = { path = "../tokio-modbus" }
tokio-serial = "5.4.4"