[package]
name = "tlsclient"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.4", optional = true }
rustls = "0.19.0"
rustls-pemfile = "0.2.0"
sct = "0.6"
webpki = "0.21.4"
serde = "1.0"
serde_derive = "1.0"
ct-logs = "0.8"
docopt = "~1.1"
env_logger = "0.8.2"
mio = { version = "0.7", features = ["os-poll", "tcp"] }
regex = "1.0"
webpki-roots = "0.21"
ring = "0.16.9"

