[package]
name = "xml_demo"
version = "0.1.0"
authors = ["Gustavo Weber Denardin <gustavo.denardin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#log = "0.4"
serde = "1.0"
#xml-rs = "0.8"
#thiserror = "1.0"
serde_derive = "*"
serde-xml-rs = "0.4.1"

